# windows_autotest

./: .env.example  README.md  config.py  pyproject.toml
examples/: get_started_click.py
src/: ui_agent.py  whatsapp_agent.py
tests/: test_whatsapp.py
