[project]
name = "Windows-Desktop-Automation"
version = "0.1.0"
description = "Hybrid UIA + image-based automation helpers for Windows (pywinauto + PyAutoGUI)"
authors = [{ name = "Ivan Kalashnikov" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "pywinauto>=0.6.8",
  "pyautogui>=0.9.54",
  "opencv-python>=4.9.0",
  "pillow>=10.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-timeout>=2.3",
  "ruff>=0.5.0",
  "black>=24.4",
  "mypy>=1.10",
  "types-PyYAML",
]

[tool.black]
line-length = 100
target-version = ["py311"]


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
markers = [
  "windows: tests that require Windows desktop UI",
]